--- a/index.html
+++ b/index.html
@@ -4,28 +4,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <title>Timer</title>
 </head>
 
 <body>
-  <main>
-    <section>
+  <main class="principal">
+    <section class="title">
       <h1>Cronometro</h1>
     </section>
 
-    <section>
-      <p>00</p>
-      <p>:</p>
-      <p>00</p>
-      <p>:</p>
-      <p>00</p>
+    <section class="cronometer">
+      <p class="hour paragraph">00</p>
+      <p class="paragraph">:</p>
+      <p class="minute paragraph">00</p>
+      <p class="paragraph">:</p>
+      <p class="second paragraph">00</p>
     </section>
 
-    <section>
-      <button type="button">Start</button>
-      <button type="button">Pause</button>
-      <button type="button">Clean</button>
+    <section class="control">
+      <button class="btn" type="button">Start</button>
+      <button class="btn" type="button">Pause</button>
+      <button class="btn" type="button">Clean</button>
     </section>
   </main>
 
