update html btn -js

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </section>
 
     <section class="control">
-      <button class="btn" type="button">Start</button>
-      <button class="btn" type="button">Pause</button>
-      <button class="btn" type="button">Clean</button>
+      <button onclick="start()" class="btn" type="button">Start</button>
+      <button onclick="pause()" class="btn" type="button">Pause</button>
+      <button class="btn" id="btn" type="button">Clean</button>
     </section>
   </main>
 
