--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
   <main class="principal">
-    <section class="title">
-      <h1>Cronometro</h1>
+    <section class="section-title">
+      <h1>Cronômetro</h1>
     </section>
 
     <section class="cronometer">
