modified html btn clean

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section class="control">
       <button onclick="start()" class="btn" type="button">Start</button>
       <button onclick="pause()" class="btn" type="button">Pause</button>
-      <button class="btn" id="btn" type="button">Clean</button>
+      <button onclick="clean()" class="btn" type="button">Clean</button>
     </section>
   </main>
 
